<resources>
    <string name="app_name">微花分期贷</string>
    <string name="base_login">登录</string>
    <string name="base_privacy_policy_tip">我已阅读理解并同意《注册协议》《隐私协议》</string>
    <string name="base_privacy_policy">隐私协议</string>
    <string name="base_register_policy">注册协议</string>
    <string name="base_user_policy">用户协议</string>
    <string name="base_home">首页</string>
    <string name="base_product">产品</string>
    <string name="base_mine">我的</string>
    <string name="base_complaint">我要投诉</string>
    <string name="base_contact_customer">联系客服</string>
    <string name="base_quota">额度</string>
    <string name="base_rmb_unit">￥</string>
    <string name="base_receive_my_quota">领取我的额度</string>
    <string name="base_feedback">联系客服</string>
    <string name="base_user_feedback">用户反馈</string>
    <string name="base_about_us">关于我们</string>
    <string name="base_unregister_account">注销账户</string>
    <string name="base_personalized_push">个性化推送</string>
    <string name="base_personalized_push_setting">个性化推送设置</string>
    <string name="base_version_code">版本号：%1$s</string>
    <string name="base_customer_email">客服邮箱：%1$s</string>
    <string name="base_feedback_tip">请填写您的反馈意见：</string>
    <string name="base_feedback_hint">请输入…</string>
    <string name="base_submit">提交</string>
    <string name="base_feedback_success">反馈成功！</string>
    <string name="base_submit_success">提交成功！</string>
    <string name="base_apply_unregister_account">申请注销账号</string>
    <string name="base_unregister_account_tip">备注：1,注销过程不可逆，且无法申请恢复 2,为了您的帐号安全，将会有7天的确认期， 在其期间内登录账号，将自动取消注销申请。</string>
    <string name="base_logout">退出登录</string>
    <string name="base_count_down_skip">%1$s秒跳过</string>
    <string name="base_input_phone_tip">请输入手机号</string>
    <string name="base_input_captcha_tip">请输入验证码</string>
    <string name="base_send_captcha">获取验证码</string>
    <string name="base_forget_pwd">忘记密码?</string>
    <string name="base_agree_policy_few_tip">需要同意《用户协议》《隐私权政策》</string>
    <string name="base_home_rate">年利率7.2%，贷款期限1~36个月</string>
    <string name="关于我们">关于我们</string>
    <string name="注册协议">注册协议</string>
    <string name="隐私协议">隐私协议</string>
    <string name="客服邮箱">客服邮箱</string>
    <string name="个性化推送">个性化推送</string>
    <string name="注销账号">注销账号</string>
</resources>