<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main_bg2"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <View
        android:id="@+id/status_bar_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0" />


    <com.tg.vloan.ui.view.HeaderBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bg_color="@color/color_main_bg2"
        app:title="@string/base_unregister_account" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/base_apply_unregister_account"
        android:textColor="@color/color_e80909"
        android:textSize="@dimen/sp_24" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_23"
        android:text="@string/base_unregister_account_tip"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16" />

    <TextView
        android:id="@+id/tv_summit"
        android:layout_width="@dimen/dp_266"
        android:layout_height="@dimen/dp_43"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@drawable/bg_btn_theme_r21"
        android:gravity="center"
        android:text="@string/base_submit"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_17" />
</LinearLayout>