<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/icon_bg_login"
        android:descendantFocusability="afterDescendants"
        android:orientation="vertical">

        <View
            android:id="@+id/status_bar_view"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="欢迎登录"
            android:textSize="@dimen/sp_28"
            android:visibility="gone"
            android:shadowColor="#e44900"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginTop="@dimen/dp_80" />

        <LinearLayout
            android:id="@+id/lyt_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_30"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/dp_360">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_60"
                >

                <ImageView
                    android:id="@+id/iv_account"
                    android:layout_width="@dimen/dp_20"
                    android:layout_height="@dimen/dp_20"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:src="@mipmap/icon_personal"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/ll_input_phone"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_55"
                    android:layout_toEndOf="@+id/iv_account"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_account"
                    tools:ignore="MissingConstraints">


                    <EditText
                        android:id="@+id/et_account"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="@dimen/dp_20"
                        android:hint="请输入手机号码"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:inputType="phone"
                        android:maxLength="11"
                        android:maxLines="1"
                        android:textColor="#edf3fe"
                        android:textColorHint="#ffD6D6D6"
                        android:textSize="@dimen/sp_16" />
                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="0.6dp"
                    android:background="#EBEBEB"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/ll_input_phone"
                    app:layout_constraintTop_toBottomOf="@+id/ll_input_phone" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/rlt_code"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_60"
                android:layout_marginTop="@dimen/dp_5">

                <ImageView
                    android:id="@+id/iv_code"
                    android:layout_width="@dimen/dp_20"
                    android:layout_height="@dimen/dp_20"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:visibility="gone"
                    android:src="@mipmap/icon_password"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/ll_captcha"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_55"
                    android:layout_toRightOf="@+id/iv_code"
                    android:layout_weight="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_code"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/et_code"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="@dimen/dp_20"
                        android:hint="请输入您的验证码"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:inputType="number"
                        android:maxLength="6"
                        android:maxLines="1"
                        android:textColor="#edf3fe"
                        android:textColorHint="#D6D6D6"
                        android:textSize="@dimen/sp_16" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_get_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/dp_14"
                    android:paddingVertical="@dimen/dp_4"
                    android:background="@drawable/bg_shape_login_btn"
                    android:text="@string/base_send_captcha"
                    android:textColor="#F75639"
                    android:textSize="@dimen/sp_14"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.6dp"
                    app:layout_constraintTop_toBottomOf="@+id/ll_captcha"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="parent"
                    android:background="#EBEBEB"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/base_forget_pwd"
                android:textColor="@color/color_999999"
                android:textSize="@dimen/sp_14"
                android:visibility="gone" />



            <TextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_55"
                android:layout_marginTop="@dimen/dp_15"
                android:background="@drawable/bg_shape_login_btn"
                android:gravity="center"
                android:text="@string/base_login"
                android:textStyle="bold"
                android:textColor="#F75639"
                android:textSize="@dimen/sp_20" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/dp_20"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_check"
                    android:layout_width="@dimen/dp_28"
                    android:layout_height="@dimen/dp_30"
                    android:paddingVertical="@dimen/dp_8"
                    android:paddingEnd="@dimen/dp_4"
                    android:src="@drawable/bg_checkbox"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/tv_privacy_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="@dimen/dp_7"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_14"
                    tools:text="@string/base_privacy_policy_tip" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>